--- a/test_file.Rmd
+++ b/test_file.Rmd
@@ -139,3 +139,84 @@ pg <-
   )
 ```
 
+##############################################
+momentum
+########################################
+
+
+```{r}
+require("PerformanceAnalytics"); require("quantmod"); require("pbapply"); require("data.table")
+```
+
+```{r}
+
+e <- new.env()
+tickers <- c("AMZN", "BIDU", "GLD", "GOOGL", "GS", "IWM", "NFLX", "MMM", "DIA", "SPY")
+getSymbols(tickers, from="2003-01-01", env=e)
+PRC <- do.call(merge,eapply(e,Ad))
+```
+```{r}
+if(last(index(PRC)) != Sys.Date())
+{
+  last <- pblapply(as.list(gsub(".Adjusted", "", names(PRC))), getQuote)
+  PRC <- rbind(PRC,xts(coredata(t(rbindlist(last)$Last)), order.by=Sys.Date()))
+}
+```
+
+```{r}
+NOM <- colnames(PRC) <- gsub(".Adjusted", "", names(PRC))
+
+MOMO60 <- round(ROC(PRC,n=60,type="discrete"),4)
+
+MOMO60 <- MOMO60["20030331::"]
+PRC <- PRC["20030331::"]
+
+indx <- seq(as.Date("2003-03-31"), length.out = 300, by = "4 weeks")
+SELECT <- MOMO60[paste(indx)]; dim(SELECT)
+```
+
+```{r}
+indx2 <- ifelse((indx %in% index(SELECT) == FALSE), paste(indx+1), paste(indx))
+
+SELECT <- MOMO60[paste(indx2)];dim(SELECT)
+PRC2 <- PRC[paste(indx2)];dim(SELECT)
+
+ASSETS4 <- combn(NOM, 4)
+```
+
+```{r}
+MOMO = function(x)
+{
+  y <- ASSETS4[,x]
+  S <- SELECT[,y]
+  
+  SEQ <- as.numeric(apply(S,1,which.max))
+  prc2 <- round(PRC2[,y],2)
+  RETS <- CalculateReturns(prc2, "discrete")
+  
+  ALL <- do.call(merge, lapply(as.list(1:ncol(RETS)), function(x){
+    Lag(reclass(ifelse(SEQ==x,1,0), match.to = S)*RETS[,x])
+  }))
+  
+  colnames(ALL) <- names(prc2)
+  ALL[is.na(ALL)] <- 0
+  
+  EQT <- reclass(rowSums(ALL), match.to = ALL);EQT[is.na(EQT)] <- 0
+  colnames(EQT) <- paste(names(prc2), collapse = "-")
+  EQT
+}
+
+STRAT <- pblapply(as.list(1:ncol(ASSETS4)), function(x) MOMO(x))
+```
+
+```{r}
+AAA <- pblapply(STRAT,colSums)
+
+df <- STRAT[order(sapply(AAA, "[[",1))]
+df <- df[(length(df)-9):length(df)]
+TOP10 <- do.call(merge,df)
+
+charts.PerformanceSummary(TOP10, cex.legend=0.45, colorset=rich10equal, geometric = TRUE, main = "TOP10")
+table.Stats(TOP10)
+```
+
