--- a/test_file.Rmd
+++ b/test_file.Rmd
@@ -111,16 +111,13 @@ there is a strong correlation between the year 2020 and 2009, 1958 and 1955.
 
 # get constituents of S&P 500
 ```{r}
-read.csv("/Users/carolinavillarreal/Desktop/TESIS/tesis/SPY ETF.csv", header = TRUE)
+
+SPY <- read.csv("/Users/carolinavillarreal/Desktop/TESIS/tesis/SPY ETF.csv", header = TRUE)
+
+tickerSPY <- as.character(SPY[[1]])
 ```
 
-```{r}
 
-```
-
-```{r}
-
-```
 
 ##############################################
 momentum
@@ -134,6 +131,8 @@ require("PerformanceAnalytics"); require("quantmod"); require("pbapply"); requir
 ```{r}
 
 e <- new.env()
+# the idea here is to use all the constituents from each index
+# this is an example
 tickers <- c("AMZN", "BIDU", "GLD", "GOOGL", "GS", "IWM", "NFLX", "MMM", "DIA", "SPY")
 getSymbols(tickers, from="2003-01-01", env=e)
 PRC <- do.call(merge,eapply(e,Ad))
@@ -213,5 +212,31 @@ EQT <- df[[which.max(AAA)]]
 charts.PerformanceSummary(EQT, geometric = TRUE)
 table.Stats(EQT)
 table.Drawdowns(EQT)
+```
+
+```{r}
+getMOMO = function(x)
+{
+  y <- as.character(strsplit(x, "-")[[1]])
+  S <- SELECT[,y]
+  
+  SEQ <- as.numeric(apply(S,1,which.max))
+  prc2 <- round(PRC2[,y],2)
+  RETS <- CalculateReturns(prc2, "discrete")
+  
+  ALL <- do.call(merge, lapply(as.list(1:ncol(RETS)), function(x){
+    Lag(reclass(ifelse(SEQ==x,1,0), match.to = S)*RETS[,x])
+  }))
+  
+  colnames(ALL) <- names(prc2)
+  ALL[is.na(ALL)] <- 0
+  
+  EQT <- reclass(rowSums(ALL), match.to = ALL);EQT[is.na(EQT)] <- 0
+  colnames(EQT) <- "momoret"
+  cbind(prc2, SEQ, round(EQT,4))
+}
+
+DATA <- getMOMO(x="GLD-NFLX-AMZN-BIDU")
+View(DATA)
 ```
 
